# CATIA-Companion

./: .gitignore  AI_answer.md  About.txt  CHANGELOG.md  ISO.xml  README.md  build.spec  config.yaml  debug_run_catvbs.py  main.py  pyproject.toml  requirements.txt  test.py  test_find_product_by_number.py
catia_companion/: __init__.py  constants.py  logging_setup.py  utils.py
catia_companion/catia/: __init__.py  bom_collect.py  bom_export.py  bom_write.py  connection.py  conversion.py  dependencies.py  template.py
catia_companion/ui/: __init__.py  bom_catia_helpers.py  bom_edit_dialog.py  bom_file_rename_dialog.py  bom_widgets.py  convert_dialog.py  export_bom_dialog.py  fastener_assembly_dialog.py  find_deps_dialog.py  help_dialog.py  log_window.py  main_window.py  style.qss
catia_copilot/: __init__.py  constants.py  logging_setup.py  utils.py
catia_copilot/catia/: __init__.py  bom_collect.py  bom_export.py  bom_write.py  connection.py  (+5 more)
docs/: catia_com_connection_issue.md
drawing_templates/: Drawing5.CATDrawing
examples/: inspect_measurable_methods.py  probe_description_attr.py  read_all_parameters.py  read_product_properties.py  traverse_hidden_state.py
macros/: add_or_create_inertia_relations.catvbs  auto_measure_inertia.catvbs  bracket_nut_assembly.txt  create_inertia_relations.catvbs  create_mass_relations.catvbs  fastener_assembly.catvbs  fastener_assembly.txt  generate_drawing.catvba  generate_drawing.catvbs  hide_wireframe.catvbs  hide_wireframe_root_only.catvbs  nut_plate_assembly.txt  read_inertia_direct.catvbs  refresh_drawing_info.catvbs
(+19 files in other folders)
