[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "catia-copilot"
version = "1.4.0"
description = "A lightweight internal tool to streamline common CATIA V5 workflows."
authors = [
    { name = "CHEN Weibo", email = "thucwb@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "pycatia>=0.6.5",
    "openpyxl>=3.1.0",
]

[project.scripts]
catia-copilot = "main:main"
